Update Post “2021-06-17-test”

--- a/_posts/2021-06-17-test.md
+++ b/_posts/2021-06-17-test.md
@@ -3,8 +3,36 @@ permalink: /posts/new
 display: normal
 layout: post
 date: '2021-06-17 23:18:39 +08:00'
-title: test
-tags: test
+title: 利用node-oidc-provider建立Auth Server
+tags: Idp
 mathjax: true
 ---
-test
+# 
+
+## Project Setting
+### Node.js
+建立新App
+
+```
+npm init
+```
+需要的package
+```
+npm install oidc-provider --save
+npm assert-provider --save
+```
+create index.js and follow node-oidc-provider api document to implement the simple oidc provider running on Heroku
+
+### Heroku
+```
+heroku create yourappname
+```
+
+## Reference
+
+* [Authorization Server implementation for Node.js](https://github.com/panva/node-oidc-provider)
+
+* [SPA and API – Initial HTTP Messages](https://authguidance.com/2017/09/26/basicspa-oauthworkflow/)
+
+* [Getting Started on Heroku with Node.js
+](https://devcenter.heroku.com/articles/getting-started-with-nodejs)
