Update Post “2021-12-21-dicom-筆記”

--- a/_posts/2021-12-21-dicom-筆記.md
+++ b/_posts/2021-12-21-dicom-筆記.md
@@ -21,17 +21,19 @@ mathjax: true
 
 #### 重要Tag
 
-* Patient Tag
-![]()
+![](https://raw.githubusercontent.com/q8977452/q8977452.github.io/master/uploads/patient.png)
 
-* Study Tag
-![]()
+![](https://raw.githubusercontent.com/q8977452/q8977452.github.io/master/uploads/study.png)
 
-* Series Tag
-![]()
+![](https://raw.githubusercontent.com/q8977452/q8977452.github.io/master/uploads/series.png)
 
-* Image Tag
-![]()
+![](https://raw.githubusercontent.com/q8977452/q8977452.github.io/master/uploads/dicom_image_1.png)
+![](https://raw.githubusercontent.com/q8977452/q8977452.github.io/master/uploads/dicom_image_2.png)
+![](https://raw.githubusercontent.com/q8977452/q8977452.github.io/master/uploads/dicom_image_3.png)
+
+### Python Package
+* Pydicom
+* SimpleITK
 
 ### Reference
 * [Official Website](https://www.dicomstandard.org/)
