Update Post “2021-12-21-dicom-筆記”

--- a/_posts/2021-12-21-dicom-筆記.md
+++ b/_posts/2021-12-21-dicom-筆記.md
@@ -7,6 +7,12 @@ title: Dicom 筆記
 tags: python dicom
 mathjax: true
 ---
+* content
+{:toc} 
+醫療數位影像傳輸協定 相關筆記
+
+
+
 ## Dicom(Digital Imaging and Communications in Medicine, 醫療數位影像傳輸協定)
 
 ![null](http://i.imgur.com/GpVnCbG.png)
